# FSC-Fast-File-Checker

./: CMakeLists.txt  README.md  main.cpp
